--- a/src/app/composer/composer.component.html
+++ b/src/app/composer/composer.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Compose</h2>
+<h2 mat-dialog-title>{{ name$ | async }}</h2>
 <mat-dialog-content class="mat-typography">
   <p>
     What is Lorem Ipsum?
