--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button color="primary" (click)="openDialog()">{{ name$ | async }}</button>
+<button mat-raised-button color="primary" (click)="openDialog()" (mouseenter)="preload()">{{ name$ | async }}</button>
